[package]
name = "breez_liquid_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.23"
chrono-tz = "0.8.1"
bip39 = { version = "2.0.0", features = ["serde"] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "e55b8439f3311be7fcd18ec14a5747d0f3dbd74f" }
flutter_rust_bridge = { version = "=2.0.0-dev.32", features = ["chrono"] }
log = "0.4.20"
lwk_common = "0.3.0"
lwk_signer = "0.3.0"
lwk_wollet = "0.3.0"
rusqlite = { version = "0.29", features = ["bundled"] }
rusqlite_migration = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempdir = "0.3.7"
uuid = { version = "1.8.0", features = ["v4"] }